tetrate/TIS0206/e2e/bad-resource.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mode-disabled
  namespace: test
spec:
  mtls:
    mode: DISABLE
