tetrate/TIS0206/e2e/good-resource.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-peer-auth-2
  namespace: test
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: permissive-peer-auth-2
  namespace: test
spec:
  mtls:
    mode: PERMISSIVE
