tetrate/TIS0206/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allow-permissive-strict-peerauth
spec:
  validationFailureAction: Enforce
